--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,10 @@ input[type="text"] {
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #394867;
-    background-color: #1a1192d;
+    background-color: #191d2d;
     border-radius: 4px;
     font-size: 16px;
+    color: #ffffff;
 }
 
 ul {
